@@ -294,8 +294,10 @@ if [ x$source_dir = x ]; then
 		esac
 		if [ -d /sys/firmware/efi ]; then
 		    target="x86_64-efi"
+		else
+		    target=i386-pc
 		fi
-		target=i386-pc;;
+		;;
 	    x"i"?"86"*)
                 # On Linux, we need the efivars kernel modules.
 		# If no EFI is available this module just does nothing
@@ -308,11 +310,12 @@ if [ x$source_dir = x ]; then
 		esac
 		if [ -d /sys/firmware/efi ]; then
 		    target="i386-efi"
-		fi
-		if [ -e /proc/device-tree ]; then
+		elif [ -e /proc/device-tree ]; then
 		    target="i386-ieee1275"
+		else
+		    target=i386-pc
 		fi
-		target=i386-pc;;
+		;;
 	    *)
 		gettext "Unable to determine your platform. Use --target." ;
 		echo	;;
