@@ -1,5 +1,9 @@
 2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-install.in: Fix an automatic target detection bug.
+
+2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-install.in: New option --efi-directory.
 
 2012-04-17  Vladimir Serbinenko  <phcoder@gmail.com>
